kubernetes/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-demo-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-demo-app
  template:
    metadata:
      labels:
        app: symfony-demo-app
    spec:
      containers:
      - name: symfony-demo-app
        image: manithams/lingoda:65
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "2G"
          requests:
            cpu: "0.5"
            memory: "256Mi"
