kubernetes/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-demo-app
  namespace: demo
spec:
  selector:
    app: symfony-demo-app
  ports:
    - port: 80
