kubernetes/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-demo-app
  namespace: demo
spec:
  rules:
  - host: my-symfony-app.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: symfony-demo-app
              port:
                number: 80
